--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-01 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Po/pot files generation uses a sorted find.
+
 2011-07-30 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed missing function in mod-csound (wouldn't compile static).
