New bot mod-follow works (plays poorly but works).

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2011-08-03 : Christian Mauduit <ufoot@ufoot.org>
+
+	* New bot mod-follow works (plays poorly but works).
+
 2011-08-02 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed GTK support.
