--- a/liquidwar6/doc/liquidwar6.texi
+++ b/liquidwar6/doc/liquidwar6.texi
@@ -746,7 +746,8 @@ SDL_mixer SDL_mixer-devel \
 freetype freetype-devel SDL_ttf SDL_ttf-devel \
 libcurl libcurl-devel \
 perl lcov global valgrind graphviz gv texinfo-tex \
-gtk2-devel
+gtk2-devel \
+rpm-build
 @end example
 
 On a DEB package based GNU/Linux system this command
@@ -767,7 +768,8 @@ libsdl1.2debian-alsa libsdl1.2-dev libsdl-image1.2 libsdl-image1.2-dev \
 libsdl-mixer1.2 libsdl-mixer1.2-dev \
 libfreetype6 libfreetype6-dev libsdl-ttf2.0-0 libsdl-ttf2.0-dev \
 libcurl4-gnutls-dev \
-perl lcov global valgrind graphviz gv texinfo texlive-full
+perl lcov global valgrind graphviz gv texinfo texlive-full \
+debhelper
 @end example
 
 Note that those requirements really depend on the exact distribution you
