--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,27 @@
+2011-08-10 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added double-click support for fire action.
+
+	* Fixed script menu engine bug.
+
+	* Score gauges now pulse too when charge is full.
+
+	* Fixed ker bug that caused follow bot to segfault.
+
+2011-08-09 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implemented stack and block network storage objects.
+
+	* Cursors blink when charged.
+
+	* Added charge to mapstate.
+
+2011-08-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed GCC version detection.
+
+	* Added new options to prepare weapons usage.
+
 2011-08-05 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed bug 33931 (SDL_mixer detection and error when no snd).
