--- a/liquidwar6/doc/cfg-gdoc.texi
+++ b/liquidwar6/doc/cfg-gdoc.texi
@@ -79,6 +79,26 @@ values given as command line arguments.
 @strong{Return value:}  1 if successfull, 0 if error.
 @end deftypefun
 
+@deftypefun {int} {lw6cfg_load_score} (char * @var{user_dir}, int * @var{score})
+@var{user_dir}:  the user directory
+
+@var{score}:  the score (out param)
+
+Gets score from file.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
+@deftypefun {int} {lw6cfg_save_score} (char * @var{user_dir}, int @var{score})
+@var{user_dir}:  the user directory
+
+@var{score}:  the score
+
+Saves score to file.
+
+@strong{Return value:}  1 on success, 0 on failure
+@end deftypefun
+
 @deftypefun {void *} {lw6cfg_init} (int @var{argc}, char * [] @var{argv})
 @var{argc}:  number of command line arguments, as given to @code{main}
 
