--- a/liquidwar6/doc/dat-gdoc.texi
+++ b/liquidwar6/doc/dat-gdoc.texi
@@ -21,3 +21,19 @@ Frees a warehouse object.
 @strong{Return value:}  new object, allocated dynamically
 @end deftypefun
 
+@deftypefun {void} {lw6dat_warehouse_purge} (lw6dat_warehouse_t * @var{warehouse})
+@var{warehouse}:  the object to purge
+
+Purges a warehouse object.
+
+@strong{Return value:}  new object, allocated dynamically
+@end deftypefun
+
+@deftypefun {int} {lw6dat_warehouse_get_nb_nodes} (lw6dat_warehouse_t * @var{warehouse})
+@var{warehouse}:  the warehouse object to query.
+
+Tells how many nodes are registered in the object.
+
+@strong{Return value:}  integer, number of nodes
+@end deftypefun
+
