--- a/liquidwar6/doc/gui-gdoc.texi
+++ b/liquidwar6/doc/gui-gdoc.texi
@@ -36,10 +36,20 @@ but this @code{pop_press} function will return 1 for each press there's been.
 @strong{Return value:}  1 if there's a press event in the queue, 0 if empty.
 @end deftypefun
 
+@deftypefun {int} {lw6gui_button_pop_double_click} (lw6gui_button_t * @var{button})
+@var{button}:  the button to query
+
+Tells how many times the button has been doubleclicked. Typical usage: the
+button is doubleclicked, released, doubleclicked, released several times. Then,
+after all this, you want to know how many times it has been doubleclicked.
+
+@strong{Return value:}  1 if there's a doubleclick event in the queue, 0 if empty.
+@end deftypefun
+
 @deftypefun {void} {lw6gui_button_update_repeat} (lw6gui_button_t * @var{button}, lw6gui_repeat_settings_t * @var{repeat_settings}, int64_t @var{timestamp})
 @var{button}:  the button to update
 
-@var{repeat_settings}:  the repeat settings (delay + interval)
+@var{repeat_settings}:  the repeat settings
 
 @var{timestamp}:  the current ticks (milliseconds)
 
