Bezerk weapon implemented, gauges display charge

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,11 @@
+2011-08-11 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Gauges now display charge instead of fighter percentage.
+
+	* Bezerk weapon implemented (default for red).
+
+	* Warehouse shifting works.
+
 2011-08-10 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added double-click support for fire action.
